first update to Delhi's focus tree

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -24,6 +24,12 @@ DEH_national_populist_party_long:0 "Imperial Sympathisers"
 
 ### Tooltips ###
 DEH_ISAC_has_formed:0 "§Y[CAN.GetName]§! has formed the ISAC\n"
+DEH_1936_election:0 "1936 election has been held"
+DEH_PRF_cores_1:0 "May now gain cores in §YBombay§! and §YAndhra§!\n"
+DEH_PRF_cores_2:0 "May now gain cores in §Y[PRF.GetName]§!'s princely states\n"
+DEH_BHC_cores_1:0 "May now gain cores in §YWest Bengal§!, §YEast Bengal§!, and §YBihar§!\n"
+DEH_BHC_cores_2:0 "May now gain cores in §YAssam§! and §YManipur§!\n"
+DEH_BHC_cores_3:0 "May now gain cores in §YOrissa§!, §YVizagapatnam§!, and §YJabalpur§!\n"
 
 ### Ideas ###
 DEH_princely_power:0 "Power of the Princes"
@@ -38,6 +44,10 @@ DEH_support_unions:0 "Unions Supported by the Government"
 DEH_fiveyearplan:0 "Five-Year Plan"
 DEH_freemarket:0 "Free Market Focus"
 DEH_balance:0 "A Balanced Economy"
+DEH_backwards_economy_1:0 "Underdeveloped Economy"
+DEH_backwards_economy_1_desc:0 "The nation is largely agrarian in nature, with many of its agricultural methods long outdated."
+DEH_backwards_economy_2:0 "Underdeveloped Economy"
+DEH_backwards_economy_2_desc:0 "The nation is largely agrarian in nature, with many of its agricultural methods long outdated. Things have slowly started to change, however, with industrialisation becoming more common in urban areas."
 
 ### Foci ###
 DEH_Industry1_focus:0 "Expand Delhi's Civilian Industry"
@@ -46,6 +56,8 @@ DEH_construction1_focus:0 "Start Building Civilian Factories"
 DEH_construction1_focus_desc:0 "Armed with new technologies, we can start building factories across our nation."
 DEH_construction2_focus:0 "Continue Building Civilian Factories"
 DEH_construction2_focus_desc:0 "We must continue to build civilian factories, to provide for our people."
+DEH_construction3_focus:0 "Continue Building Civilian Factories"
+DEH_construction3_focus_desc:0 "We must continue to build civilian factories, to provide for our people."
 DEH_digging:0 "Expand Mines"
 DEH_digging_desc:0 "In order to fuel our factories, we must expand our mines. New technologies will help us with this."
 DEH_railroads1:0 "Expand the Indian Rail Network"
@@ -58,6 +70,8 @@ DEH_production2:0 "Continue to Expand Military Factories"
 DEH_production2_desc:0 "While our military production has increased, it is not nearly at a level necessary to take on the Bharatiya Commune and the Princely Federation. We must continue to expand it."
 DEH_production3:0 "Finish Military Expansion"
 DEH_production3_desc:0 "With a little more effort, we should be able to increase our military production to a respectable level."
+DEH_new_economy:0 "The New Economy"
+DEH_new_economy_desc:0 "At long last, we have put our reputation as a backwater aside and may now truly claim to be a rising industrial power, ready to take on our enemies."
 DEH_ISAC:0 "Join the ISAC"
 DEH_ISAC_desc:0 "By joining the Imperial Scientific and Academic Council, we will be able to greatly expand our research potential through funding and information sharing."
 DEH_ISAC2:0 "Benefits from the ISAC"
@@ -74,6 +88,8 @@ DEH_armyreform1:0 "Start Reforming the Army"
 DEH_armyreform1_desc:0 "Our army is in poor shape. Divided between White and Indian officers and princes, and lacking in direction, we must try to unite the army to combat Syndicalism and the reactionary princes to the south."
 DEH_princearmyreform:0 "The Question of the Princely Armies"
 DEH_princearmyreform_desc:0 "The armies of Delhi are divided among regular divisions and the private armies of the Maharajas. This hampers communication and effectiveness in combat, and we must find a solution before it is too late."
+DEH_diarchy:0 "Address the Diarchy"
+DEH_diarchy_desc:0 "Our most urgent issue is the status of administrative governance which have languished under the ancient relic of the diarchy - dual rule over the provinces shared between the officials of the central government and the domains of the many princely states. The premier is under great pressure to do away with the archaic system of indirect rule in favour of more efficient and democratic local administration."
 DEH_doctrine:0 "Choosing Doctrines for our Army"
 DEH_doctrine_desc:0 "We must chose a direction for our army. Should we emphasise speed and armoured vehicles, firepower, or sheer manpower? Our officers are now debating the best course of action."
 DEH_motorized:0 "Motorising the Indian Army"
@@ -90,6 +106,8 @@ DEH_gurkha:0 "Expanding the Gurkha Regiments"
 DEH_gurkha_desc:0 "The Gurkhas are the most feared soldiers in the world. We must ensure that their equipment is up to date and their training sufficient for their missions."
 DEH_naval_effort:0 "Expanding the Imperial Indian Navy"
 DEH_naval_effort_desc:0 "Our navy is in a laughable shape. With no real military dockyards, we cannot produce any ships. We must dedicate all our political effort to creating the infrastructure necessary to maintain a navy."
+DEH_old_canada_ships:0 "Purchase Canadian Ships"
+DEH_old_canada_ships_desc:0 "Canada has a number of old vessels which they have long since retired from use, but which might still be useful in bolstering our tiny navy. Perhaps we should offer to purchase them?"
 DEH_flexible_navy:0 "Flexible Navy Focus"
 DEH_flexible_navy_desc:0 "Our navy should be flexible, and able to respond to a wide variety of problems."
 DEH_large_navy:0 "Large Navy Focus"
@@ -102,6 +120,8 @@ DEH_destroyer_effort:0 "Destroyer Effort"
 DEH_destroyer_effort_desc:0 "Destroyers are effective at destroying enemy submarines. We should ensure our shipping is safe by constructing as many of these as possible."
 DEH_capital_ships_effort:0 "Capital Ship Effort"
 DEH_capital_ships_effort_desc:0 "Capital ships, including battleships and carriers, are the kings of the seas. We must build large numbers of these to intimidate our enemies."
+DEH_rearm_marine:0 "Rearm the Royal Indian Marine"
+DEH_rearm_marine_desc:0 "As trade between the newly unified Indian subcontinent and the rest of the world begins to accelerate, the security of Indian shipping has become a most urgent matter. The naval chief of staff and admiralty in Karachi have petitioned the prime minister with pleas to secure development aid from our allies so that Indian commerce can penetrate the high seas adequately escorted."
 DEH_aviation_effort:0 "Expanding the Royal Indian Air Force"
 DEH_aviation_effort_desc:0 "Our air force is laughably small. We must focus our efforts on expanding it to ensure domination of the skies."
 DEH_lalroy:0 "Indra Lal Roy Offers his Services"
@@ -116,12 +136,14 @@ DEH_CAS_effort:0 "CAS Effort"
 DEH_CAS_effort_desc:0 "Close air support allows us to strafe enemy units during battles with frightening accuracy, giving us a large edge on our opponents"
 DEH_NAV_effort:0 "Naval Bomber Focus"
 DEH_NAV_effort_desc:0 "Naval Bombers allow us to destroy enemy navies without risking our own ships. We should build as many of these as possible if our navy is small or busy elsewhere."
+DEH_expand_indian_air_force:0 "Expand the Indian Air Force"
+DEH_expand_indian_air_force_desc:0 "With our unification of the Indian sub-continent, it has been proposed in parliament that we convey a greater amount of funds towards the Indian Air Force in order to construct an air armada capable of covering the nation in its entirety."
 DEH_prepare1:0 "Preparing for the Final Struggle"
 DEH_prepare1_desc:0 "It is inevitable that we will face both the Bharatiya Commune and the Princely Federation at some point in the near future. We should ensure we are as strong as possible before proceeding."
-DEH_nepalsphere:0 "Atrocities in Nepal!"
-DEH_nepalsphere_desc:0 "Word has reached us of atrocities in Nepal against Indian minorities! We must do something!"
-DEH_afghansphere:0 "Ensure Afghanistan is in our Sphere of Influence"
-DEH_afghansphere_desc:0 "While we utterly destroyed the Afghan army back in 1936, we did not push further. Now we must make sure that they do not attack again, while we are busy elsewhere. Ensure their government is loyal to us, and puppet them! Send an ultimatum!"
+DEH_fortify_princely_border:0 "Fortify the Princely Border"
+DEH_fortify_princely_border_desc:0 "Our first order of business in the coming war is to secure our southern border. Only from a proper line of fortresses can we strike our against the Princely Federation."
+DEH_fortify_commune_border:0 "Fortify the Bharatiya Border"
+DEH_fortify_commune_border_desc:0 "Our first order of business in the coming war is to secure our southern border. Only from a proper line of fortresses can we strike our against the Commune."
 DEH_prepare2:0 "Continuing Preparations for the Final Struggle"
 DEH_prepare2_desc:0 "Now that our immediate sphere is secure, we must prepare for war soon, on our terms or theirs..."
 DEH_invadeBHC:0 "Invade the Syndicalists!"
@@ -136,19 +158,21 @@ DEH_revoltPRF:0 "The new Maharaja of Cochin has Imperial loyalties. If we could 
 DEH_PRF_revolters:0 "The Maharaja of Cochin Revolts!"
 DEH_unifyindia:0 "Unify India!"
 DEH_unifyindia_desc:0 "Jai Hind! The subcontinent is once again ours! Now what?"
-DEH_bhutan:0 "Ensure Bhutan is in our Sphere of Influence"
-DEH_bhutan_desc:0 "The small mountain kingdom of Bhutan is isolated and insignificant globally. While impossible to invade, it would make a loyal puppet, controlling several important mountain passes. We should threaten their government with destruction unless they submit to our power!"
-DEH_madras:0 "The Question of the Madras Rump State"
-DEH_madras_desc:0 "The Tamil state of Madras to the south has largely stayed out of global affairs. Invading them would be easy, but the Tamil population would not enjoy northern rule. Puppetting them may be a better option."
-DEH_siam:0 "Include Siam in our Sphere of Influence"
-DEH_siam:0 "Now that Burma is under our control, Siam is the next step in expanding our sphere of influence. This will be risky, as Japan may protect them."
-DEH_goa:0 "Seize Goa!"
-DEH_goa_desc:0 "The Portuguese trading city of Goa is the last remnant of rival European colonisation on the subcontinent. We must seize it!"
-DEH_ceylon:0 "Ceylon and the German Indian Ocean Territories"
-DEH_ceylon_desc:0 "Ceylon and several island chains, including the Andamans and the Maldives, were sized by Germany following the Weltkrieg. We must take them back while they are occupied with France!"
-DEH_burma:0 "Integrate Burma"
-DEH_burma_desc:0 "Now that we have liberated Burma from the grasp of Syndicalism, we must make it a part of our state."
-DEH_economyreform1:0 "The Indian Economy Act of 1937"
+DEH_bhutan:0 "Claim Tawang"
+DEH_bhutan_desc:0 "The mountainous frontier territory known as Tawang is rightfully ours, and was seized by the traitorous Bhutanese during the chaos of the Weltkrieg. It is time to reassert our domain over the area, now that a true national government has been reestablished."
+DEH_nepal:0 "Our Claims Against Nepal"
+DEH_nepal_desc:0 "Nepal expanded into the Indian lowlands in the chaos following the Weltkrieg. It is time to reassert our domain over those territories."
+DEH_madras:0 "The Deccan States"
+DEH_madras_desc:0 "The nations of southern India must either join India willingly or be conquered - the choice is theirs."
+DEH_siam:0 "Incorporating Siam"
+DEH_siam_desc:0 "Our nation's ambitions extend to expanding past the borders of Burma. The Siamese must become part of our Federation, whether they agree or not."
+DEH_goa:0 "Claim Goa"
+DEH_goa_desc:0 "The enclave of Goa is nothing more than a burr on the side of our proud nation. It is rightfully our territory, and must be returned."v
+DEH_ceylon:0 "Claim Ceylon"
+DEH_ceylon_desc:0 "By rights, Ceylon and the Andaman Islands are part of our nation's rightful territory. Their colonialism must come to an end."
+DEH_burma:0 "Incorporating Burma"
+DEH_burma_desc:0 "The eastern realm of Burma was once part of the Raj, and the time has come to incorporate it into our expanding realm."
+DEH_economyreform1:0 "The Indian Economy Act"
 DEH_economyreform1_desc:0 "Our new Prime Minister has decided to enact a major economic reform act. It is expected to encounter debate and resistance in the Chamber of Princes, however."
 DEH_economyreform2:0 "Reforming the Industry"
 DEH_economyreform2_desc:0 "Our new government has decided to draft an industry rights reform act."
@@ -156,18 +180,20 @@ DEH_industryreformact:0 "The Bombay Plan"
 DEH_industryreformact_desc:0 "A new proposal for industrial development has emerged in the Dominion Legislature. Called the Bombay Plan, this will have large effects on our economy."
 DEH_movies:0 "Indian Cinema: Propaganda Machine?"
 DEH_movies_desc:0 "The vibrant Indian cinema scene has the possibility to be a powerful tool of the state, and while movies are still mainly a toy of the rich, they have wide reaching social effects."
-DEH_corePRF:0 "Integrating the Princely Federation"
-DEH_corePRF_desc:0 "Now that the Princely Federation has been destroyed, we must integrate it into our country"
-DEH_PRFreform1:0 "Reform in Former Princely Federation"
-DEH_PRFreform1_desc:0 "The people of the southern districts suffered greatly under the authoritarian rule of Osman Ali Khan. We must now ensure that their lives are better to earn their loyalty."
-DEH_PRFreform2:0 "Finish Reforms in the Princely Federation"
-DEH_PRFreform2_desc:0 "We must finish the reforms in the South if we want the area to become a productive part of our nation."
-DEH_coreBHC:0 "Integrating the former Bharatiya Commune"
-DEH_coreBHC_desc:0 "Now that the Bharatiya commune has been destroyed, we must integrate their former territories into our nation."
-DEH_BHCreform1:0 "Zamindar Squatters in Orissa"
-DEH_BHCreform1_desc:0 "Zamindars, or feudal landlords, have returned to their old family lands in Orissa, previously party of the Bharatiya Commune. We must evict them!."
-DEH_BHCreform2:0 "Nationalising Plantations in Assam?"
-DEH_BHCreform2_desc:0 "Large plantations across Assam, previously run and owned by the Syndicalist government, are not being worked anymore due to a dispute in ownership. We must ensure they operate productively!"
+DEH_princely_officers:0 "Princely India's Officer Corps"
+DEH_princely_officers_desc:0 "The first order of business is dealing with the officers of the defeated Princely Federation. Do we give them a place in our nation? Or retire them before they can make further trouble?"
+DEH_PRFreform1:0 "Integrate the Former Bombay Presidency"
+DEH_PRFreform1_desc:0 "We have brought about the complete collapse of the princely state and established control over the southern-most part of the sub-continent. Now, however, we must decide how to integrate the provinces previously ailing under feudal rule."
+DEH_PRFreform2:0 "Integrate the Deccan Princely States"
+DEH_PRFreform2_desc:0 "The southern princely states were always somewhat politically detached from the federal government in Hyderabad. This makes it harder for us to establish an efficient central administration. Never the less, that is what we will have to achieve."
+DEH_bhartiya_officers:0 "Socialist India's Officer Corps"
+DEH_bhartiya_officers:0 "The first order of business is dealing with the officers of the defeated Bharatiya Commune. Do we give these socialists a place in our nation? Or retire them before they can make further trouble?"
+DEH_industry_question:0 "The Question of Industry"
+DEH_industry_question_desc:0 "The Bharatiya Commune relied on nationalised industry, and its business leaders are now turning to us to answer the question regarding what they should do now - the answer for which will determine just how easy it will be for us to pacify the Commune's former heartland."
+DEH_orissa_question:0 "Fate of the Zamindar Squatters"
+DEH_orissa_question_desc:0 "There are a large number of exiled princes who wish to resume their estates in Orissa, now that the socialists have been defeated. Doing so will, however, mean evicting those who have taken over their lands. The question will need to be settled if we are to solidify our rule over the region."
+DEH_assam_question:0 "Fate of Assam's Tea Plantations"
+DEH_assam_question_desc:0 "The vast tea plantations of Assam have functioned as state owned entities until the downfall of their socialist rulers. Now they are suffering, and we must settle the question of what is to be done with them if we are to solidify our rule over the region."
 
 ### Events ###
 delhi.0.t:0 "Introduction to the Dominion of India"
