more work on Delhi events and focus tree

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -30,6 +30,10 @@ DEH_PRF_cores_2:0 "May now gain cores in §Y[PRF.GetName]§!'s princely states\n
 DEH_BHC_cores_1:0 "May now gain cores in §YWest Bengal§!, §YEast Bengal§!, and §YBihar§!\n"
 DEH_BHC_cores_2:0 "May now gain cores in §YAssam§! and §YManipur§!\n"
 DEH_BHC_cores_3:0 "May now gain cores in §YOrissa§!, §YVizagapatnam§!, and §YJabalpur§!\n"
+DEH_BHC_convert_faster:0 "Cores will be gained on the §Y[BHC.GetName]§!'s states more quickly\n"
+DEH_BHC_convert_slower:0 "Cores will be gained on the §Y[BHC.GetName]§!'s states more slowly\n"
+DEH_PRF_convert_faster:0 "Cores will be gained on the §Y[PRF.GetName]§!'s states more quickly\n"
+DEH_PRF_convert_slower:0 "Cores will be gained on the §Y[PRF.GetName]§!'s states more slowly\n"
 
 ### Ideas ###
 DEH_princely_power:0 "Power of the Princes"
@@ -48,6 +52,9 @@ DEH_backwards_economy_1:0 "Underdeveloped Economy"
 DEH_backwards_economy_1_desc:0 "The nation is largely agrarian in nature, with many of its agricultural methods long outdated."
 DEH_backwards_economy_2:0 "Underdeveloped Economy"
 DEH_backwards_economy_2_desc:0 "The nation is largely agrarian in nature, with many of its agricultural methods long outdated. Things have slowly started to change, however, with industrialisation becoming more common in urban areas."
+DEH_riaf:0 "Royal Indian Air Force"
+DEH_war_fever:0 "Reunion Fever"
+DEH_war_fever_desc:0 "A fever to reunite the Indian sub-continent has taken hold, with crowds in the capital chanting the names of those enemies who would prevent the nation from reuniting India!"
 
 ### Foci ###
 DEH_Industry1_focus:0 "Expand Delhi's Civilian Industry"
@@ -254,16 +261,19 @@ delhi.10.b:0 "Grant the princes a pension, but abolish their sovereignty!"
 delhi.10.c:0 "Abolish indirect rule and expropriate the princes!"
 
 delhi.11.t:0 "The Indian Economy Act"
-delhi.11.d:0 "The new government has decided to draft a major industrial reform bill. We can try to shift more of our power towards military production, but this will be costly, and keeping the status quo will earn us loyalty among industrial barons like J. R. D. Tata."
-delhi.11.a:0 "Keep a free market system. It has served us well."
-delhi.11.b:0 "We should have a balanced system."
+delhi.11.d:0 "The Indian economy is falling apart. Archaic trade regulations, corrupt tax collectors and abhorrent lack of foreign investment is driving a sword through the neck of economic progress. Calling for a liberalisation of the thriftiness of our nation, the merchants, business magnates and industrialists of the Indus Valley are calling for reform to sweep the economic currents of the Dominion. The Premier is himself not ill-disposed to these ideas which include a broad range of privatization, tax reforms, and institution of inflation-controlling measures. However, such a strong dose of liberalism might greatly upset the rural poor that still constitute the majority of the Dominion."
+delhi.11.a:0 "Indian freedom and Indian greatness demand a free market economy!"
+delhi.11.b:0 "An emancipated people needs a balanced economic system!"
 delhi.11.c:0 "Enforce a single market for a single nation!"
 
-delhi.12.t:0 "Status of Trade Unions in Delhi"
-delhi.12.d:0 "Trade unions, while not as prevalent as in Europe, have long had a history in India. With the new threat of Syndicalism, however, the government has been forced to take a stand on them."
-delhi.12.a:0 "Ban the Unions! The workers can fend for themselves!"
-delhi.12.b:0 "The government will protect workers rights, without the need for unions!"
-delhi.12.c:0 "The government will support the trade unions!"
+delhi.12.t:0 "The Indian Industry Act [GetYear]"
+delhi.12.d.liberal:0 "In the wake of the our decision to restructure the landscape of Indian economy, calls have arisen from labour activists throughout the Dominion that our government solidify the rights of both the industrial and agrarian workers. Although the factories spanning from Khyber Pass down to Gujarat are relatively scarce, legislation in favour of the workers might serve to stem the tide of Syndicalist influence seeping into the trade unions. However, the backbone of the Liberal Party is founded on the support of business magnates and wealthy industrialists - a group fundamentally opposed to a strong and emancipated worker’s movement. The government will have to take a controversial decision no matter what."
+delhi.12.d.swaraj:0 "Following our decision to restructure the landscape of Indian economy, calls have arisen from labour activists throughout the Dominion that our government solidify the rights of both the industrial and agrarian workers. Although the factories spanning from Khyber Pass down to Gujarat are relatively scarce, legislation in favour of the workers might serve to stem the tide of Syndicalist influence seeping into the trade unions. Yet the Swaraj Party is facing a thoroughly hard choice. On one hand, a great deal of electoral support for the party stems from the emancipated middle class who regard workers’ rights positively, but another wing garners considerable financial aid and support from the industrialists and bankers of Delhi and Lahore. With the party thus divided, it seems that only the premier himself will have the power to force through a decision."
+delhi.12.d.jinnah:0 "Following our decision to restructure the landscape of Indian economy, calls have arisen from labour activists throughout the Dominion that our government solidify the rights of both the industrial and agrarian workers. Although the factories spanning from Khyber Pass down to Gujarat are relatively scarce, legislation in favour of the workers might serve to stem the tide of Syndicalist influence seeping into the trade unions. For Jinnah the course looks clear. Swept into office on the winds of popular affection founded in the lowest levels of society, a refusal to improve the livelihood of the industrial worker will appear as all but traitorous."
+delhi.12.d.union:0 "Since the Unionist Party swept into office in the last election a reform of the stagnate Indian economy has been passed and the status of the princely states been determined. However, demands have been presented by leaders of the nascent trade union movement of the north-west - demanding the government legislate in favour of greater workers’ rights. Traditional and slightly reactionary in its origin, this is a very controversial demand for the incumbent Unionist cabinet. However, the movement for the betterment of workers’ rights is an increasingly powerful organisation within the Dominion. As such a contradictory stance by the government and its landed supporters might risk driving the up and coming trade unionists into the arms of radical Syndicalism."
+delhi.12.a:0 "Trade unionism is nothing short but Syndicalism, restrict it!"
+delhi.12.b:0 "Let us enforce workers' rights moderately, but progressively!"
+delhi.12.c:0 "The proletariat shall no longer suffer, support the trade unions!"
 
 delhi.13.t:0 "The Bombay Plan"
 delhi.13.d:0 "Now that our opponents have been destroyed, we can turn to returning our industry to civilian purposes. Three plans have been presented, and must be decided upon."
@@ -347,6 +357,23 @@ delhi.156.t:0 "Passing of Sir Mian Fazl-i-Husain"
 delhi.156.d:0 "The architecht of the gentry/peasant (kisan) political alliance that laid the groundwork for the powerful Unionist Party, Sir Mian Fazl-i-Husain has passed away after a prolonged period of illness. Having been absent from the day to day running of the party for a prolonged period of time owing to his illness, Fazl-i-Husain will never the less be sorely missed within conservative circles."
 delhi.156.a:0 "The Unionist Party soldiers on!"
 
+delhi.160.t:0 "Canada Selling its Old Ships"
+delhi.160.d:0 "While many of the ships we've purchased from the British Navy are too old or in too poor a condition to serve as functioning war vessels, they can still add to our naval transport fleet...and we suspect there are a few ships that are still seaworthy yet. It's a good deal, and one which will help us dominate the Indian Ocean."
+delhi.160.a:0 "Let's see what we have..."
+delhi.161.t:0 "Rearming of the Royal Indian Marine"
+delhi.161.d:0 "As trade between the newly unified Indian subcontinent and the rest of the world begins to accelerate, the security of Indian shipping has become a most urgent matter. The current state of the Royal Indian Marine leaves much to be desired both in regards to the vessels employed as well as the training of the few capable officers serving. However, the Empire at large has a proud naval tradition and both the Canadian and Australasian shipyards and naval colleges provide the Atlantic and Pacific theatres of operation with powerful fleets where imperial power can be projected. Consequently the naval chief of staff and admiralty in Karachi have petitioned the prime minister with pleas to secure development aid from our allies so that Indian commerce can penetrate the high seas adequately escorted."
+delhi.161.a:0 "We need a strong navy to secure commerce and liberty!"
+delhi.162.t:0 "Aiding the New Indian Navy"
+delhi.162.d:0 "With cross-Empire trade picking up, the Indian government has decided to expand its naval assets to help protect the increased shipping. The Indian ambassador to [Root.GetNameDef] has approached our government with a request for development aid regarding both engineers and naval officers. This could be a great way of strengthening the Empire's position in the Far East!"
+delhi.162.a:0 "Dispatch technical and development assistance!"
+delhi.162.b:0 "They're on their own"
+delhi.163.t:0 "Arrival of the [From.GetAdjective] Naval Mission"
+delhi.163.d:0 "After a vigorous sea journey the [From.GetAdjective] naval attaches and ship construction experts have debarked in Karachi. Should we set them up in Karachi itself or maybe expand the existing civilian naval hub in Bombay?"
+delhi.163.d.aust:0 "The naval delegates from the [From.GetAdjective] government have just arrived in Bombay. With their great experience of conducting operations in the Pacific the new Indian navy shall become a truly imposing sight on the high seas!"
+delhi.163.a:0 "Use them to expand the Karachi naval base!"
+delhi.163.b:0 "Set them up in Bombay, the beating heart of Indian commerce!"
+delhi.163.c:0 "We should name a ship HMIS Bruce!"
+
 delhi.200.t:0 "The Long Night of The Festival of Lights"
 delhi.200.d:0 "In the late hours of the grand Hindu festival of Diwali - the Festival of Lights - riots broke out in Dehradun. Hundreds upon hundreds of celebrating Indians utilised the gathering to launch spontaneous demonstrations against our governance of the Ganges-Yamuna Basin. Nepali shops were burned and the stationed garrisons came under siege. In the chaos of the flames, the governor of the city panicked and ordered the nervous police troops to open fire on a gathering around the Ghanta Gar, leaving around 50 civilians dead, riddled with bullets. As a result, the underground wing of the Indian National Congress has called strikes throughout the lowlands, reaching revolutionary heights in the East. From Delhi, Hyderabad and Calcutta feelings are running high as notables engaged in demagoguery call for Indian intervention in a lawful Indian land. It appears that his majesty, Tribhuvan Shah might better watch out."
 delhi.200.a:0 "This will be a warning heard throughout India!"
@@ -378,3 +405,12 @@ delhi.207.a:0 "And not a single shot fired!"
 delhi.208.t:0 "Nepali Atrocities in the Ganges-Yamuna Basin"
 delhi.208.d:0 "Horrible news has reached us from the Ganges-Yamuna Basin! Late last night, the celebration of the Hindu festival of Diwali turned violent as hundreds upon hundreds of Indians utilised the gathering to launch spontaneous protests against Nepal’s occupation of rightful Indian soil. A local police commander lost his nerve and ordered his troops to fire upon one of these demonstrations, leaving 50 civilians dead. Tempers are running high throughout the lowlands, reaching revolutionary heights in Dehradun. Our government should be prepared for any eventuality. After all, do we not claim to represent ALL Indians?"
 delhi.208.a:0 "Outrageous!"
+
+delhi.300.t:0 "The Fate of Princely India's Officer Corps"
+delhi.300.d:0 "Although defeated in the field, the officer corps of Princely India proved its worth on several occasions against our troops. With Hyderabad occupied and the territories of the former Raj almost unified, these men, true patriots, are longing to resume their service to India. However, a great deal of our loyal commanders fear the consequences of so readily accepting former enemies into the army."
+delhi.300.a:0 "We need all of them to make India mighty once again"
+delhi.300.b:0 "These men are beyond redemption, lock them away for ever!"
+delhi.301.t:0 "The Fate of Socialist India's Officer Corps"
+delhi.301.d:0 "The Syndicalist threat on the subcontinent has been crushed under the caterpillar tracks of our armoured vehicles. However, some of the commanders who once owed their loyalty to the Calcutta government are willing to give up their political perversions in order to serve Mother India once more. The issue is a dangerous one, given the unforgiving hatred once shared between our two states, and many of our loyal officers deeply resent serving with former enemies."
+delhi.301.a:0 "Let the least politically tainted officers have a commission"
+delhi.301.b:0 "These men are beyond redemption, lock them away for ever!"
