The Beginning of the End - except for some localisation

--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -122,6 +122,7 @@ ETH_Germany_Not_Watching:0 "Unlocks the Reforms and our own Outwards Ambitions."
 ETH_Integrate_Dervish:0 "Integrate the ex-Dervish State"
 ETH_Integrate_Dervish_desc:0 "There is still uncertainty about the fate of Somaliland. However, we must properly integrate it into our nation and reap the benefits."
 ETH_Derv_Int:0 "Strife within the ex-Dervish State in Somaliland will cease and it will be fully integrated"
+ETH_Outwards_Amb:0 "We may now choose our Outwards Ambitions"
 
 ### Events ###
 ethiopia.1.t:0 "Ethiopia, an Empire at the Crossroads"
